--- a/404.html
+++ b/404.html
@@ -1,236 +1,13 @@
-<!DOCTYPE html>
-<html lang="fr">
-<!-- - - - -  - - - PORTFOLIO - - - - - - - - - - - -->
-
-<!-- - - - - - - - STRUCTURE - - - - - - - - - - - - -
-1 à 2 sections par page
-puis
-1 à 2 niveaux de div
-- - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
+<!doctype html>
+<html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-    <script> var dataLayer = [{}]; </script>
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-MS6MP7S');</script>
-    <!-- End Google Tag Manager -->
-
-    <meta charset="UTF-8">
-    <meta name="description" content="Portfolio sous Github">
-    <meta name="author" content="Christine Nagad">
-    <meta name="keywords" content="Christine, Nagad, portfolio, WEB, développeur, front-end">
-    <title>CHRISTINE NAGAD</title>
-
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/materialize.min.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="./ChrNagad.css">
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-
+  <meta charset="utf-8">
+  <title>Dataviz</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.d1472eeb2fbdf8995f7f.css"></head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MS6MP7S" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- - - - - - - - - - 1e page - - - - - - - - -->
-    <section id="hautPage1" title="organisée, consciencieuse, sens du service">
-        <div class="visage">
-        </div>
-        <div class="titre">
-            <h2>CHRISTINE NAGAD</h2>
-            <h1>Développeuse <br>WEB front-end</h1>
-            <p id="p1">Mobile : +06 62 68 49 25<br>E-mail: nagadchr@yahoo.com</p>
-            <div>
-                <button id="bouton1Bas" onclick="scroll1Bas()">Suite</button>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- - - - - - - - - - 2e page - - - - - - - - -->
-    <section id="hautPage2">
-        <div id="videAGauche"></div>
-        <div id="logosOutils">
-            <img id="html" src="./sources/HTML.png" alt="HTML 5">
-            <img id="css" src="./sources/CSS.png" alt="CSS 3">
-            <img id="js" src="./sources/javascript.png" alt="javascript">
-            <img id="angular" src="./sources/angular.png" alt="angular">
-            <img id="materialize" src="./sources/materialize.png" alt="Materialize">
-            <img id="react" src="./sources/react.png" alt="react">
-            <img id="gsap" src="./sources/gsap.svg" alt="GSAP">
-            <img id="agile" src="./sources/agile.png" alt="Agile Scrum">
-            <p id="formation">Formation Coding Academy by Epitech</p>
-            <p id="certif">Certification OPQUAST en cours</p>
-        </div>
-    </section>
-    <section id="blocDe8">
-        <div class="blocDe2">
-            <a href="ProjetPlage/animation.html"> <img class="site" src="./sources/Plage.png"
-                    alt="Plage avec transat" /></a>
-            <p class="sousTitre">Animations</p>
-        </div>
-        <div class="blocDe2">
-            <a href="Angular/dist/dataviz/index.html"><img class="site" src="./sources/angularDataviz.png" alt="Jardin japonnais" /></a>
-            <p class="sousTitre">Angular</p>
-        </div>
-        <div class="blocDe2">
-            <a href="ProjetEmoji/gsap.html"><img class="site" src="./sources/Emoji-factory.png"
-                    alt="Usine d'emoji" /></a>
-            <p class="sousTitre">GSAP</p>
-        </div>
-        <div class="blocDe2">
-            <a href="ProjetLicorne/licorne.html"><img class="site" src="./sources/Licorne.png" alt="Licorne" /></a>
-            <p class="sousTitre">Materialize</p>
-        </div>
-    </section>
-    <section class="boutonsBas">
-        <button id="bouton2Bas" onclick="scroll2Bas()">Suite</button>
-        <button id="bouton2Haut" onclick="scroll2Haut()">Retour</button>
-    </section>
-    <!-- - - - - - - - - - 3e page - - - - - - - - -->
-    <section id="hautPage3">
-        <div id="autresMetiers">
-            <div id="metier1">
-                <h3 class="h3_1">Assistante à maîtrise d'ouvrage</h3>
-                <p class="p3">Ingénieur-Mastère en informatique</p>
-            </div>
-            <div id="metier2">
-                <h3 class="h3_1">I.T. service manager</h3>
-                <p class="p3">Certifiée ITIL, ISO 20.000</p>
-            </div>
-
-        </div>
-        <ul class="collapsible">
-            <li>
-                <div class="collapsible-header">
-                    <img src="./sources/carrefour.png" alt="Carrefour" title="cliquez !">
-                    <img src="./sources/orange.png" alt="Orange" title="cliquez !">
-                    <img src="./sources/RATP.png" alt="RATP" title="cliquez !">
-                    <img src="./sources/dga.jpg" alt="DGA" title="cliquez !">
-                </div>
-                <div class="collapsible-body">
-                    <p>
-                        <strong class="bleu">CARREFOUR</strong> : Service Manager (11 ans), 37 applications pour 27
-                        pays.<br>
-                        <strong class="bleu">ORANGE</strong> : maître d'ouvrage ; conçoit le contrat d'un centre
-                        d'appels international.<br>
-                        <strong class="bleu">RATP</strong> : réorganise la maintenance d'un site industriel de
-                        rénovation de bus.<br>
-                        <strong class="bleu">DGA CENTRE D'ESSAIS EN VOL</strong> : négocie et élabore les spécifications
-                        d'un équipement militaire embarqué.</p>
-                </div>
-            </li>
-            <li>
-                <div class="collapsible-header">
-                    <img src="./sources/CCI.png" alt="CCI de Lille" title="cliquez !">
-                    <img src="./sources/Areva.png" alt="AREVA" title="cliquez !">
-                    <img src="./sources/Renault.jpg" alt="Renault" title="cliquez !">
-                    <img src="./sources/gtie.jpg" alt="GTIE" title="cliquez !">
-                </div>
-                <div class="collapsible-body">
-                    <p>
-                        <strong class="bleu">CCI DE LILLE</strong> : formateur de créateurs de start-up à l'assurance
-                        qualité.<br>
-                        <strong class="bleu">AREVA</strong> : chef d'un projet de supervision de convoyeurs en milieu
-                        radioactif.<br>
-                        <strong class="bleu">RNUR - RENAULT</strong> : développeuse de la supervision du prototype d'une
-                        chaîne.<br>
-                        <strong class="bleu"> GTIE AUTOMATION</strong> : chef de projets d'informatique industrielle et
-                        automatismes.</p>
-                </div>
-            </li>
-            <li>
-                <div class="collapsible-header">
-                    <img src="./sources/matra.jpg" alt="Matra" title="cliquez !">
-                    <img src="./sources/EADS.jpg" alt="EADS" title="cliquez !">
-                    <img src="./sources/Thales.png" alt="Thales" title="cliquez !">
-                    <img src="./sources/SNCF.png" alt="SNCF" title="cliquez !">
-                </div>
-                <div class="collapsible-body">
-                    <p>
-                        <strong class="bleu">MATRA COMMUNICATION</strong> : ingénieur qualité sur un projet de
-                        téléphonie. <br>
-                        <strong class="bleu">EADS (AEROSPATIALE)</strong> : ingénieur qualité pour un logiciel
-                        embarqué (Confidentiel Défense)<br>
-                        <strong class="bleu">THALES</strong> : ingénieur qualité et test en recherche
-                        mathématique (Confidentiel Défense).<br>
-                        <strong class="bleu">SNCF</strong> : auditeur puis ingénieur qualité de 4 projets logiciels
-                        ferroviaires.</p>
-                </div>
-            </li>
-            <li>
-                <div class="collapsible-header">
-                    <img src="./sources/ELF.jpg" alt="ELF" title="cliquez !">
-                    <img src="./sources/edf.png" alt="EDF title="cliquez !">
-                    <img src="./sources/alstom.gif" alt="Alstom" title="cliquez !">
-                    <img src="./sources/intertechnique.jpg" alt="Intertechnique" title="cliquez !">
-                </div>
-                <div class="collapsible-body">
-                    <p>
-                        <strong class="bleu">ELF CONGO (CORAF)</strong> : chef de projet du développement de la
-                        supervision d'un site pétrolier.<br>
-                        <strong class="bleu">EDF</strong> : ingénieur qualité logiciel du projet de Décompte d'Energie.<br>
-                        <strong class="bleu">ALSTOM</strong> : ingénieur qualité logiciel d'un projet logiciel en
-                        avionique.<br>
-                        <strong class="bleu">INTERTECHNIQUE</strong> : ingénieur qualité logiciel d'un projet logiciel
-                        en avionique.</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <section class="boutonsBas">
-        <button id="bouton3Bas" onclick="scroll3Bas()">Suite</button>
-        <button id="bouton3Haut" onclick="scroll3Haut()">Retour</button>
-    </section>
-
-    <!-- - - - - - - - - - 4e page - - - - - - - - -->
-    <section id="hautPage4">
-        <section id="partieGauche">
-            <img id="visageSeul" src="sources/CNagadPetiteUnie.jpg" alt="photo visage">
-            <h2>CHRISTINE NAGAD</h2>
-            <p>Mobile : +06 62 68 49 25</p>
-            <p>nagad.christine@yahoo.com</p>
-            <a id="linkedin" href="https://www.linkedin.com/in/christine-nagad-92058622/">Linkedin</a>
-            <a id="viadeo" href="http://www.viadeo.com/p/002rgrmwifj451k">Viadeo</a>
-
-        </section>
-        <section id="partieDroite">
-            <div>
-                <h2 id="parlons">Contactez-moi et échangeons sur vos projets</h2>
-                <form id="formulaire" action="https://formspree.io/nagadchr@yahoo.com" method="POST">
-                    Vos nom(s) et prénom(s): <input type="text" name="nom" class="saisie"><br>
-                    Votre société : <input type="text" name="societe" class="saisie"><br>
-                    Votre numéro de téléphone: <input type="text" name="telephone" class="saisie"><br>
-                    Votre adresse mail : <input type="email" name="email" class="saisie"><br>
-                    Votre message : <textarea id="story" name="story" rows="5" cols="33" class="saisie"></textarea><br>
-                    <a href="mailto:nagadchr@yahoo.com&subject=Portfolio">Envoyer l'e-mail</a>
-                </form>
-            </div>
-        </section>
-    </section>
-    <section id="troisBoutons">
-        <form method="get" action="sources/ChristineNagadWebDeveloper.pdf">
-            <button id="telechargerCV" type="submit" value="Send">Télécharger CV</button>
-        </form>
-        <input id="envoyer" class="material-icons" type="submit" form="formulaire" value="send">
-        <button id="bouton4Haut" onclick="scroll4Haut()"
-            onsubmit="dataLayer.push({'event': 'santianoEvent','eventCategory': 'Utilisateur','eventAction':'Formulaire de contact','eventLabel': 'Message envoyé','eventValue': '1'})">Retour</button>
-    </section>
-
-
-    <!-- - - - - - JavaScript at end of body for optimized loading - - - - - -->
-    <script type="text/javascript" src="./materialize/materialize.min.js"></script>
-    <script type="text/javascript" src="./ChrNagad.js"></script>
-
-</body>
-
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b62a0c6b168f504c432e.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.d4619201c71afe97cc9f.js"></script></body>
 </html>
