--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.d1472eeb2fbdf8995f7f.css"></head>
+<link rel="stylesheet" href="Angular/dist/dataviz/styles.d1472eeb2fbdf8995f7f.css"></head>
 <body>
   <app-root></app-root>
 <script type="text/javascript" src="Angular/dist/dataviz/runtime.26209474bfa8dc87a77c.js"></script>
