--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dataviz</title>
-  <base href="/Angular/dist/dataviz/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="Angular/dist/dataviz/styles.d1472eeb2fbdf8995f7f.css"></head>
