Ajout du stage - suppression de React

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@ puis
             <img id="js" src="./sources/javascript.png" alt="javascript">
             <img id="angular" src="./sources/angular.png" alt="angular">
             <img id="materialize" src="./sources/materialize.png" alt="Materialize">
-            <img id="react" src="./sources/react.png" alt="react">
             <img id="gsap" src="./sources/gsap.svg" alt="GSAP">
             <img id="agile" src="./sources/agile.png" alt="Agile Scrum">
             <p id="formation">Formation Coding Academy by Epitech</p>
+            <p id="stage">Stage Angular à eZ-Nergy (Paris)</p>
             <p id="certif">Certification OPQUAST en cours</p>
         </div>
     </section>
