--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ puis
             <img id="agile" src="./sources/agile.png" alt="Agile Scrum">
             <p id="formation">Formation Coding Academy by Epitech</p>
             <p id="stage">Stage Angular à eZ-Nergy (Paris)</p>
-            <p id="certif">Certification OPQUAST en cours</p>
+            <p id="certif">Certification OPQUAST niveau "expert" (925 / 1000)</p>
         </div>
     </section>
     <section id="blocDe8">
